--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ commands:
     parameters:
       repo:
         type: string
-        default: jahia/build2test
+        default: jahia/jahia_test
       jver:
         type: string
       base_url:
@@ -94,7 +94,7 @@ commands:
               sleep 1
             done
             echo "setting max_allowed_packet..."
-              mysql -u root -p$MYSQL_ROOT_PASSWORD -h $DB_HOST --protocol=tcp -e "set global max_allowed_packet=134217728;" 
+              mysql -u root -p$MYSQL_ROOT_PASSWORD -h $DB_HOST --protocol=tcp -e "set global max_allowed_packet=134217728;"
             echo "now importing schema..."
             echo  mysql -u $DB_USER -p$DB_PASS -h $DB_HOST --protocol=tcp -D $DB_NAME
             cat /data/digital-factory-data/db/sql/schema/mysql/01-* | \
@@ -356,10 +356,6 @@ workflows:
           requires:
             - build_8000
           <<: *job_options
-      - publish_8000:
-          requires:
-            - test_8000
-          <<: *job_options
       #####################
       ########## 8.0.0.0_fs
       ## build for k8s demo
@@ -369,10 +365,6 @@ workflows:
           requires:
             - build_8000_fs
           <<: *job_options
-      - publish_8000_fs:
-          requires:
-            - test_8000_fs
-          <<: *job_options
       #####################
       ############# 7.3.5.0
       - build_7350:
@@ -380,10 +372,6 @@ workflows:
       - test_7350:
           requires:
             - build_7350
-          <<: *job_options
-      - publish_7350:
-          requires:
-            - test_7350
           <<: *job_options
       #####################
       ############# 7.3.4.1
@@ -393,8 +381,38 @@ workflows:
           requires:
             - build_7341
           <<: *job_options
-      - publish_7341:
+      #####################
+      # Then we put the workflow on hold until someone give approval
+      - human_validation:
+          type: approval
           requires:
+            - test_8000_fs
+            - test_8000
+            - test_7350
             - test_7341
           <<: *job_options
-      #####################
+      - slack/approval-notification:
+          include_project_field: true
+          message: ":monkey_face: CircleCI requests your approval: please confirm that images are ready to be pushed in public repository..."
+          requires:
+            - test_8000_fs
+            - test_8000
+            - test_7350
+            - test_7341
+          <<: *job_options
+     #- publish_8000_fs:
+     #    requires:
+     #      - human_validation
+     #    <<: *job_options
+     #- publish_8000:
+     #    requires:
+     #      - human_validation
+     #    <<: *job_options
+     #- publish_7350:
+     #    requires:
+     #      - human_validation
+     #    <<: *job_options
+     #- publish_7341:
+     #    requires:
+     #      - human_validation
+     #    <<: *job_options
